--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 
 h1{
     color: aliceblue;
-    border-right: 105px solid skyblue;
+    /* border-left: 4px solid rgb(154, 163, 190); */
     line-height: 1.5;
     font-size:64px;
     text-align: left;
     margin-left: 3.5%;
-    padding-left: 1.5%;
+    /* padding-left: 1.5%; */
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
 }
@@ -44,9 +44,10 @@ body{
 }
 
 .card{
-  margin: 75px 50px 50px 50px;
+  margin: 5% 1.5%;
   border-radius: 20px;
-  width: 20px;
+  width: 25%;
+  float: left;
 }
 
 .container {
@@ -87,9 +88,10 @@ body{
 .Footer{
   color: aliceblue;
   font-family: "Ubuntu";
+  margin-bottom: 22px;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  color: white;
   text-align: center;
 }
