--- a/src/App.css
+++ b/src/App.css
@@ -42,17 +42,16 @@ body{
 .submitButton{
   margin-left: 20px;
 }
-
-.card{
-  margin: 5% 1.5%;
-  border-radius: 20px;
-  width: 25%;
-  float: left;
+.error-message{
+  color: red;
+  text-align: left;
+  padding-left: 49px;
 }
 
-.container {
+/* 
+/* .container {
   padding: 15%;
-}
+} */ */
 
 .country {
   font-size: 0.5em;
@@ -61,7 +60,26 @@ body{
     color:white;
     background: orange;
 }
+.weather-container{
+  display: flex;
+  flex-wrap: wrap;
 
+}
+.weather-item{
+  padding: 2%;
+  flex: 0.3;
+  width: fit-content;
+  justify-content: flex-start;
+}
+
+.card{
+  /* margin: 5% 1.5%; */
+  border-radius: 20px;
+  width: 100%;
+  height: 50%;
+  padding: 5%;
+
+}
 .container  h2 {
   color: #53627C;
   font-size: 1.5em;
@@ -89,7 +107,6 @@ body{
   color: aliceblue;
   font-family: "Ubuntu";
   margin-bottom: 22px;
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
